--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,4 @@ add_executable(pra other/prictice/three_day/pra.cpp)
 add_executable(tree chapter_five/tree.cpp)
 add_executable(chapter_five chapter_five/tree.cpp chapter_five/tree.h chapter_five/three_queue.cpp)
 add_executable(graph chapter_six/graph/graph.cpp)
+add_executable(string chapter_four/string.cpp)
